cabal-version:      3.0
name:               luau-grammar
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Alexander McCord
maintainer:         alex@mccord.dev
category:           Language
build-type:         Simple

tested-with: GHC ==9.4.8

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.0.0,
        text ^>=2.1.1,

executable luau-grammar
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.0.0,
        luau-grammar,

test-suite luau-grammar-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.0.0,
        luau-grammar,
