cabal-version:  3.0
name:           metasyntax
version:        0.1.0.0
synopsis:       Language specification generation
description:    metasyntax generates a .tmLanguage so that you
                don't have to write in the wretched and accursed
                so-called "language" of regular expressions.
license:        MIT
license-file:   LICENSE
author:         Alexander McCord
maintainer:     alex@mccord.dev
category:       Language
build-type:     Simple
tested-with:    GHC ==9.4.8

source-repository head
    type:     git
    location: https://github.com/alexmccord/metasyntax

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Language
        Machine
        Oniguruma
        Parsec
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.0.0,
        mtl,
        text,
        containers,

executable metasyntax
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.0.0,
        text,
        metasyntax,

test-suite metasyntax-test
    import:           warnings
    other-modules:
        MachineTest
        OnigurumaTest
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.0.0,
        text,
        HUnit,
        metasyntax,
